DHFPROD-8099: Fix legend overlap in Mapping Step Details

--- a/marklogic-data-hub-central/ui/src/components/entities/mapping/mapping-step-detail/mapping-step-detail.module.scss
+++ b/marklogic-data-hub-central/ui/src/components/entities/mapping/mapping-step-detail/mapping-step-detail.module.scss
@@ -473,4 +473,5 @@ hr {
   padding-right: 55px;
   left: 63%;
   position: relative;
+  z-index: -1000;
 }
